{
  "version": 4,
  "terraform_version": "1.10.3",
  "serial": 33,
  "lineage": "8e250a3a-562b-b058-5ea7-b862671ab3e5",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "NAt-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06b76b90a559a0929",
            "arn": "arn:aws:ec2:us-east-1:250502052604:elastic-ip/eipalloc-06b76b90a559a0929",
            "domain": "vpc",
            "id": "eipalloc-06b76b90a559a0929",
            "network_border_group": "us-east-1",
            "public_dns": "ec2-34-200-159-96.compute-1.amazonaws.com",
            "public_ip": "34.200.159.96",
            "public_ipv4_pool": "amazon",
            "vpc": true
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_route_table_association.rt-asociacion-publica",
            "aws_subnet.subred-publica",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:internet-gateway/igw-0afd9d2dc6d436b72",
            "id": "igw-0afd9d2dc6d436b72",
            "owner_id": "250502052604",
            "tags": {
              "Name": "internet_gateway"
            },
            "tags_all": {
              "Name": "internet_gateway"
            },
            "vpc_id": "vpc-0bb7ceff256a10c08"
          },
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "balanceador",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:loadbalancer/app/balanceador-de-carga/e2f8ad169ccb1254",
            "arn_suffix": "app/balanceador-de-carga/e2f8ad169ccb1254",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "balanceador-de-carga-184304790.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:250502052604:loadbalancer/app/balanceador-de-carga/e2f8ad169ccb1254",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "balanceador-de-carga",
            "preserve_host_header": false,
            "security_groups": [
              "sg-0d4f5618d26de1bca"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-011a4950aed8f806e"
              },
              {
                "subnet_id": "subnet-07ce0f5a91b51b608"
              }
            ],
            "subnets": [
              "subnet-011a4950aed8f806e",
              "subnet-07ce0f5a91b51b608"
            ],
            "tags": {
              "Name": "balanceador-de-carga"
            },
            "tags_all": {
              "Name": "balanceador-de-carga"
            },
            "vpc_id": "vpc-0bb7ceff256a10c08",
            "xff_header_processing_mode": "append",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.lb_security",
            "aws_subnet.subred-publica",
            "aws_subnet.subred-publica-az2",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener/app/balanceador-de-carga/e2f8ad169ccb1254/b4160c3527624319",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "",
                    "status_code": "200"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener/app/balanceador-de-carga/e2f8ad169ccb1254/b4160c3527624319",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:loadbalancer/app/balanceador-de-carga/e2f8ad169ccb1254",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.balanceador",
            "aws_security_group.lb_security",
            "aws_subnet.subred-publica",
            "aws_subnet.subred-publica-az2",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "apache_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/apache-target-group/bdd48e86186774ba",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener-rule/app/balanceador-de-carga/e2f8ad169ccb1254/b4160c3527624319/f271c33f8a856bc5",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener-rule/app/balanceador-de-carga/e2f8ad169ccb1254/b4160c3527624319/f271c33f8a856bc5",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener/app/balanceador-de-carga/e2f8ad169ccb1254/b4160c3527624319",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.balanceador",
            "aws_lb_listener.http",
            "aws_lb_target_group.apache_target_group",
            "aws_security_group.lb_security",
            "aws_subnet.subred-publica",
            "aws_subnet.subred-publica-az2",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "json_ales_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/json-target-group-3001/3bc941a539e844e5",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener-rule/app/balanceador-de-carga/e2f8ad169ccb1254/b4160c3527624319/095bba44014448ff",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/ales.json"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener-rule/app/balanceador-de-carga/e2f8ad169ccb1254/b4160c3527624319/095bba44014448ff",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener/app/balanceador-de-carga/e2f8ad169ccb1254/b4160c3527624319",
            "priority": 102,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.balanceador",
            "aws_lb_listener.http",
            "aws_lb_target_group.json_target_group_3001",
            "aws_security_group.lb_security",
            "aws_subnet.subred-publica",
            "aws_subnet.subred-publica-az2",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "json_stouts_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/json-target-group-3002/d2492ae09db5de16",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener-rule/app/balanceador-de-carga/e2f8ad169ccb1254/b4160c3527624319/bf815d7bc5e0f186",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/stouts.json"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener-rule/app/balanceador-de-carga/e2f8ad169ccb1254/b4160c3527624319/bf815d7bc5e0f186",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener/app/balanceador-de-carga/e2f8ad169ccb1254/b4160c3527624319",
            "priority": 103,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.balanceador",
            "aws_lb_listener.http",
            "aws_lb_target_group.json_target_group_3002",
            "aws_security_group.lb_security",
            "aws_subnet.subred-publica",
            "aws_subnet.subred-publica-az2",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "json_usuarios_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/json-target-group-3000/e1ee0de1501f2711",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener-rule/app/balanceador-de-carga/e2f8ad169ccb1254/b4160c3527624319/854ec44a2fd47822",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/usuarios.json"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener-rule/app/balanceador-de-carga/e2f8ad169ccb1254/b4160c3527624319/854ec44a2fd47822",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:listener/app/balanceador-de-carga/e2f8ad169ccb1254/b4160c3527624319",
            "priority": 101,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.balanceador",
            "aws_lb_listener.http",
            "aws_lb_target_group.json_target_group_3000",
            "aws_security_group.lb_security",
            "aws_subnet.subred-publica",
            "aws_subnet.subred-publica-az2",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "apache_target_group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/apache-target-group/bdd48e86186774ba",
            "arn_suffix": "targetgroup/apache-target-group/bdd48e86186774ba",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/apache-target-group/bdd48e86186774ba",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "apache-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0bb7ceff256a10c08"
          },
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "json_target_group_3000",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/json-target-group-3000/e1ee0de1501f2711",
            "arn_suffix": "targetgroup/json-target-group-3000/e1ee0de1501f2711",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/json-target-group-3000/e1ee0de1501f2711",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "json-target-group-3000",
            "port": 3000,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0bb7ceff256a10c08"
          },
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "json_target_group_3001",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/json-target-group-3001/3bc941a539e844e5",
            "arn_suffix": "targetgroup/json-target-group-3001/3bc941a539e844e5",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/json-target-group-3001/3bc941a539e844e5",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "json-target-group-3001",
            "port": 3001,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0bb7ceff256a10c08"
          },
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "json_target_group_3002",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/json-target-group-3002/d2492ae09db5de16",
            "arn_suffix": "targetgroup/json-target-group-3002/d2492ae09db5de16",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:250502052604:targetgroup/json-target-group-3002/d2492ae09db5de16",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "json-target-group-3002",
            "port": 3002,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "ip",
            "vpc_id": "vpc-0bb7ceff256a10c08"
          },
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06b76b90a559a0929",
            "association_id": "eipassoc-0cb428b89c1c99650",
            "connectivity_type": "public",
            "id": "nat-0a7055bbf643bf5e2",
            "network_interface_id": "eni-0463610bbe8bcc80f",
            "private_ip": "10.0.101.201",
            "public_ip": "34.200.159.96",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-07ce0f5a91b51b608",
            "tags": {
              "Name": "NAT gateway"
            },
            "tags_all": {
              "Name": "NAT gateway"
            }
          },
          "dependencies": [
            "aws_eip.NAt-gateway",
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_route_table_association.rt-asociacion-publica",
            "aws_subnet.subred-publica",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "nat-gateway-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:route-table/rtb-0a1f6fb7da769a628",
            "id": "rtb-0a1f6fb7da769a628",
            "owner_id": "250502052604",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0a7055bbf643bf5e2",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tabla Enrutamiento para el NAT gateway"
            },
            "tags_all": {
              "Name": "Tabla Enrutamiento para el NAT gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb7ceff256a10c08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.NAt-gateway",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.public-rt",
            "aws_route_table_association.rt-asociacion-publica",
            "aws_subnet.subred-publica",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:route-table/rtb-0d7896bc03c2ef60a",
            "id": "rtb-0d7896bc03c2ef60a",
            "owner_id": "250502052604",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0afd9d2dc6d436b72",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "Tabla Enrutamiento para Internet gateway"
            },
            "tags_all": {
              "Name": "Tabla Enrutamiento para Internet gateway"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bb7ceff256a10c08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-asociacion-NAT",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e3124b068e2ed98d",
            "route_table_id": "rtb-0a1f6fb7da769a628",
            "subnet_id": "subnet-065c379cedef4200a"
          },
          "dependencies": [
            "aws_eip.NAt-gateway",
            "aws_internet_gateway.igw",
            "aws_nat_gateway.nat-gateway",
            "aws_route_table.nat-gateway-rt",
            "aws_route_table.public-rt",
            "aws_route_table_association.rt-asociacion-publica",
            "aws_subnet.subred-privada",
            "aws_subnet.subred-publica",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-asociacion-publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-022e607866143ec5a",
            "route_table_id": "rtb-0d7896bc03c2ef60a",
            "subnet_id": "subnet-07ce0f5a91b51b608"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.subred-publica",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "rt-asociacion-publica-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0985d04c3ff295651",
            "route_table_id": "rtb-0d7896bc03c2ef60a",
            "subnet_id": "subnet-011a4950aed8f806e"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.public-rt",
            "aws_subnet.subred-publica-az2",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb_security",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:security-group/sg-0d4f5618d26de1bca",
            "description": "Security group para ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0d4f5618d26de1bca",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "alb-security",
            "name_prefix": "",
            "owner_id": "250502052604",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bb7ceff256a10c08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "security_ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:security-group/sg-07c244926b09f0ca3",
            "description": "Security group para las ecs contenedores",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-07c244926b09f0ca3",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d4f5618d26de1bca"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0d4f5618d26de1bca"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "seguridad",
            "name_prefix": "",
            "owner_id": "250502052604",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0bb7ceff256a10c08"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb_security",
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred-privada",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:subnet/subnet-065c379cedef4200a",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-065c379cedef4200a",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "250502052604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred-privada"
            },
            "tags_all": {
              "Name": "subred-privada"
            },
            "vpc_id": "vpc-0bb7ceff256a10c08"
          },
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred-publica",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:subnet/subnet-07ce0f5a91b51b608",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.0.101.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07ce0f5a91b51b608",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250502052604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred-publica"
            },
            "tags_all": {
              "Name": "subred-publica"
            },
            "vpc_id": "vpc-0bb7ceff256a10c08"
          },
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "subred-publica-az2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:subnet/subnet-011a4950aed8f806e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.102.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011a4950aed8f806e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250502052604",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "subred-publica-az2"
            },
            "tags_all": {
              "Name": "subred-publica-az2"
            },
            "vpc_id": "vpc-0bb7ceff256a10c08"
          },
          "dependencies": [
            "aws_vpc.Desarrollo-web-VPC"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "Desarrollo-web-VPC",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250502052604:vpc/vpc-0bb7ceff256a10c08",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cacd4e39346d1626",
            "default_route_table_id": "rtb-0b266ac97025aaa07",
            "default_security_group_id": "sg-03f794d1846782860",
            "dhcp_options_id": "dopt-0d5c4275442d0c4ac",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0bb7ceff256a10c08",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b266ac97025aaa07",
            "owner_id": "250502052604",
            "tags": {
              "Name": "VPC"
            },
            "tags_all": {
              "Name": "VPC"
            }
          }
        }
      ]
    }
  ]
}